
Version: 2.3.4 [2011-11-19]
o Now byChipType() for UnitAnnotationDataFile and derivatives give an
  error message with more information on which file it failed to 
  locate, e.g. by specifying filename extension it looked for.
o Added default getDefaultExtension() for UnitAnnotationDataFile,
  which guesses the filename extension from the class name, unless
  overridden by a subclass.


Version: 2.3.3 [2011-11-17]
o Added trial version of AromaUcscGenomeTextFile.


Version: 2.3.2 [2011-11-14]
o BUG FIX: process() of ChromosomeExplorer would throw "Error in
  file(file, ifelse(append, "a", "w")) : [...] cannot open file '/
  [...] (new Array(': No such file or directory".  Importing
  the R.rsp namespace in the aroma.core namespace solved this.
  Thanks Qian Liu for reporting on this.


Version: 2.3.1 [2011-11-11]
o Added extractPSCNArray() for AromaUnitTotalCnBinary{File|Set}.


Version: 2.3.0 [2011-10-28]
o Added a namespace to the package, which will be more or less
  a requirement starting with R v2.14.0.


Version: 2.2.2 [2011-09-29]
o Added alpha version of the AromaRepository class.


Version: 2.2.1 [2011-09-24]
o readHeader(), readRawFooter() and writeRawFooter() of 
  AromaTabularBinaryFile would try to read non-signed 4-byte integers,
  which is not supported and would instead be read as signed integers.
  From R v2.13.1 this would generated warnings.


Version: 2.2.0 [2011-09-01]
o Submitted to CRAN.
o The package passes all redundancy tests.


Version: 2.1.5 [2011-08-30]
o BUG FIX: After introducing a sanity check in aroma.core v2.1.2
  (2011-05-11), getSnpPositions() of AromaCellSequenceFile would throw
  "Error: length(pos) == ncol(cells) is not TRUE".  However, it was not
  until aroma.core v2.1.3 (2011-08-01) was release that some people got
  problem with this.  It turns out that the sanity check catches an
  error in how getSnpPositions() of AromaCellSequenceFile allocates
  the result vector, a bug that has been there for a very long time.